[package]
name = "animal-age"
version = "1.1.1"
edition = "2021"
description = "CLI tool to convert animal ages to human years and show lifespan progress"
authors = ["Frank Stallion Jr frank.stallion@ojefe.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/animal-age"
keywords = ["cli", "animal", "age", "converter"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
thiserror = "1.0"

[dev-dependencies]
