[package]
name = "animal-age"
version = "1.1.2"
edition = "2021"
description = "CLI tool to convert animal ages to human years and show lifespan progress"
authors = ["Frank Stallion Jr frank.stallion@ojefe.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fibnas/animal-age"
keywords = ["cli", "animal", "calculator", "converter"]
categories = ["command-line-utilities"]
exclude = ["target/", "entries.json", "screenshots/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
thiserror = "1.0"

[[bin]]
name = "animal-age"
path = "src/main.rs"

